# agnitio

./: .gitignore  Dockerfile  README.md  fix_files.py  pyproject.toml  test.db
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0ed66875b9a3_add_is_demo_to_users.py  42e1362b8fcc_add_unique_constraint_to_flashcard_.py  47849c576b5a_create_initial_tables.py  7026903629d7_add_status_and_make_nullable_for_.py  748af495507b_add_flashcard_reviews_table.py  97d8c9fcde35_add_users_and_user_id_to_sessions.py
app/: config.py  main.py
app/models/: __init__.py  session.py  user.py
app/routers/: auth.py  sessions.py
app/schemas/: session.py  user.py
app/services/: ai.py  auth.py  pdf_export.py  srs.py
tests/: conftest.py  test_auth.py  test_quizzes.py  test_security.py  test_sessions.py  test_srs.py
web/: AGENTS.md  CLAUDE.md  package-lock.json  package.json
web/.next/dev/: prerender-manifest.json  trace
web/.next/dev/cache/: .rscinfo
web/.next/dev/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
web/.next/dev/server/app/: page_client-reference-manifest.js
web/.next/dev/static/chunks/: [root-of-the-server]__02nfq85._.css  [root-of-the-server]__02nfq85._.css.map  _00v6nu2._.js  _00v6nu2._.js.map  _06xh9le._.js  _06xh9le._.js.map  _07.eano._.js  _07.eano._.js.map  _0zr25w7._.js  _0zr25w7._.js.map  node_modules_0lx093h._.js.map  node_modules_@swc_helpers_cjs_0-4ujiy._.js.map  node_modules_next_app_0jt-zj..js.map  node_modules_next_dist_07p5au~._.js.map  node_modules_next_dist_0rt-2cr._.js.map  node_modules_next_dist_0tt2wve._.js.map  (+21 more)
web/.next/dev/types/: routes.d.ts  validator.ts
web/src/api/: api.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/analytics/: page.tsx
web/src/app/login/: page.tsx
web/src/app/signup/: page.tsx
web/src/components/: Navbar.tsx
web/src/context/: AuthContext.tsx
web/src/hooks/: useRequireAuth.ts
(+148 files in other folders)
