[project]
name = "agnitio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "google-genai>=1.73.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "sqlalchemy==2.0.49",
    "sqlalchemy==2.0.49",
    "uvicorn>=0.46.0",
    "weasyprint>=63.0",
]
extra = '''
[tool.pyright]
pythonVersion = \"3.11\"

[tool.ruff]
target-version = \"py311\"
'''
