[project]
name = "agnitio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "google-genai>=2.0.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.28",
    "sqlalchemy==2.0.49",
    "sqlalchemy==2.0.49",
    "uvicorn>=0.46.0",
    "weasyprint>=63.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
]
extra = '''
[tool.pyright]
pythonVersion = \"3.11\"

[tool.ruff]
target-version = \"py311\"
'''
